<resources>
    <string name="app_name">SQL</string>
    <string name="db_text">База данных</string>
    <string name="start_button_hint">Начать</string>
    <string name="delete_button_hint">Удалить</string>
    <string name="get_button_hint">Получить</string>
    <string name="save_button_hint">Сохранить</string>
    <string name="exit_menu_title">Выход</string>
    <string name="n_n">\n\n</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="phone">Телефон</string>
    <string name="post">Должность</string>
</resources>