<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/nameEditTextET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/surnameEditTextET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="6dp">

        <EditText
            android:id="@+id/phoneEditTextET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:layout_weight="2" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="6dp">

        <Button
            android:id="@+id/saveButtonBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:layout_weight="3"
            android:hint="@string/save_button_hint" />

        <Button
            android:id="@+id/getButtonBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:layout_weight="3"
            android:hint="@string/get_button_hint" />

        <Button
            android:id="@+id/deleteButtonBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:layout_weight="3"
            android:hint="@string/delete_button_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:text="@string/surname"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:text="@string/phone"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:text="@string/post"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="6dp">

        <TextView
            android:id="@+id/nameTextViewTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:text="@string/n_n" />

        <TextView
            android:id="@+id/surnameTextViewTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:text="@string/n_n" />

        <TextView
            android:id="@+id/phoneTextViewTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:text="@string/n_n" />

        <TextView
            android:id="@+id/postTextViewTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:text="@string/n_n" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>